# Hydra-gemini

./: .env.example  .gitignore  LICENSE  README.md  hydra.cmd  install_windows.bat  logo_prompt.txt  pyproject.toml  requirements.txt  start.bat
config/: default_config.yaml
docker/: Dockerfile  docker-compose.yml
examples/: kaggle_tool_use.py  keys.json.example
hydra/: __init__.py  __main__.py  cli.py
hydra/api/: app.py
hydra/api/middleware/: error_handler.py  logging.py
hydra/api/routes/: admin.py  chat.py  embed.py  health.py  models.py  tokens.py
hydra/api/static/: docs.html  index.html
hydra/commands/: config_cmd.py  dashboard.py  doctor.py  gateway.py  keys.py  logs.py  onboard.py  reset.py  setup.py  status.py  test_cmd.py  tokens_cmd.py
hydra/core/: __init__.py  config.py  constants.py  exceptions.py  redis_client.py
hydra/models/: enums.py  schemas.py
hydra/services/: api_key_service.py  gemini_client.py  health_monitor.py  rate_limiter.py  redis_service.py  router_service.py  stats_service.py  token_service.py  tunnel.py
hydra/ui/: __init__.py  panels.py  progress.py  tables.py  themes.py
hydra/utils/: formatters.py  helpers.py  token_counter.py  validators.py
