[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydra-gemini"
version = "0.1.0"
description = "GeminiHydra — Aggregate free-tier Gemini API keys into one powerful gateway"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Hydra Contributors"}
]
keywords = ["gemini", "api", "gateway", "rate-limit", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0.0",
    "jinja2>=3.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.2.0",
    "fakeredis>=2.21",
]

[project.scripts]
hydra = "hydra.cli:run"

[project.urls]
Homepage = "https://github.com/LikithMeruvu/Hydra-gemini"
Documentation = "https://github.com/LikithMeruvu/Hydra-gemini#readme"
Repository = "https://github.com/LikithMeruvu/Hydra-gemini"

[tool.setuptools.packages.find]
include = ["hydra*"]

[tool.setuptools.package-data]
hydra = ["api/static/*.html"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
